Remove nav.html file as it's no longer required. Format base.css for readability, add media query for contact.html

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,3 +1,5 @@
+/*-----------------------------------------Styles for all elements*/
+
 * {
     font-family: 'Merriweather', serif;
     color: black;
@@ -5,6 +7,64 @@
     padding: 0;
     box-sizing: border-box;
     background-color: whitesmoke;
+}
+
+/*----------------------------------------Navbar */
+
+.topnav {
+    overflow: hidden;
+    background-color: black;
+}
+
+.topnav a:not(:first-child) {
+    float: right;
+    display: block;
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    padding: 16px 20px;
+    transition: transform .5s;
+
+}
+
+.topnav a:hover {
+    transform: scale(1.1);
+}
+
+.active {
+    float: left;
+    display: block;
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    padding: 16px 20px;
+    transition: transform .5s;
+}
+
+#icon {
+    display: none;
+}
+
+/*---------------------------------------------- Media quereis for navbar */
+
+@media screen and (max-width:600px) {
+    .topnav a:not(:first-child){display: none;}
+
+    #icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive #icon {
+        position: absolute;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: center;
+    }
 }
 
 
@@ -16,7 +76,7 @@
     border-bottom: 1px solid black;
 }
 
-/* Game playing area */
+/*-------------------------------------------- Game playing area */
 
 #game-grid {
     row-gap: 8px;
@@ -43,7 +103,7 @@
 
 
 
-/* Styles for contact.html */
+/* ------------------------------------------ Styles for contact.html */
 
 .question-title {
     text-align: center;
@@ -83,59 +143,12 @@ input[type=text],[type=email], textarea {
     display:none;
 }
 
+/* -------------------------------- Media queries for contact page */
 
-/*Navbar */
+@media screen and (max-width: 600px){
+    .form-container {
+        width: 80%;
 
-.topnav {
-    overflow: hidden;
-    background-color: black;
-}
-
-.topnav a:not(:first-child) {
-    float: right;
-    display: block;
-    color: white;
-    background-color: black;
-    text-decoration: none;
-    padding: 16px 20px;
-    transition: transform .5s;
-
-}
-
-.topnav a:hover {
-    transform: scale(1.1);
-}
-
-.active {
-    float: left;
-    display: block;
-    color: white;
-    background-color: black;
-    text-decoration: none;
-    padding: 16px 20px;
-    transition: transform .5s;
-}
-
-#icon {
-    display: none;
-}
-
-@media screen and (max-width:600px) {
-    .topnav a:not(:first-child){display: none;}
-
-    #icon {
-        float: right;
-        display: block;
     }
 }
 
-@media screen and (max-width: 600px) {
-    .topnav.responsive #icon {
-        position: absolute;
-    }
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: center;
-    }
-}
